src/Domain/Compiler/Tests/Expression/__Baselines__/IntegerLiteral_Decimal_Error_S32MaxOverflow-StashIr.error
error: Integer literal has exceeded its max limit of s32(2147483647).
--> main.hs:8:8
  | 
8 | return 2147483648;    
  |        ^^^^^^^^^^
