src/Domain/Compiler/Tests/Expression/__Baselines__/IntegerLiteral_Decimal_Error_S32MaxOverflow-StashIr.types
domain Common::MyApplication implements IConsoleApplication
{

public:

    fn OnApplicationStart(): void
    {
return 2147483648;    }
       ~~~~~~~~~~  s64
}